[package]
name = "recess"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]

[dependencies]
hyper-tls = "0.1"
native-tls = "0.1"
futures = "0.1"
hyper = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
tokio-timer = "0.1"
url = "1.5"
error-chain = "0.10"
derive_builder = "0.5"