[package]
name = "recess"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Rust playground client"
documentation = "https://softprops.github.io/recess"
homepage = "https://github.com/softprops/recess"
repository = "https://github.com/softprops/recess"
keywords = ["playground", "crates.io", "api"]
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "softprops/recess" }
coveralls = { repository = "softprops/recess" }

[[bin]]
doc = false
name = "recess"

[dependencies]
clap  = "2.27"
futures = "0.1"
hyper = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
tokio-timer = "0.1"
url = "1.5"
failure = "0.1"
derive_builder = "0.5"
tokio = "0.1"
structopt = "0.2"

[dependencies.hyper-tls]
optional = true
version = "0.3"

[features]
default = ["tls"]
tls = ["hyper-tls"]